--- a/app/src/main/res/layout/activity_switch_schedule.xml
+++ b/app/src/main/res/layout/activity_switch_schedule.xml
@@ -6,4 +6,129 @@
     android:layout_height="match_parent"
     tools:context=".SwitchSchedule">
 
+
+    <TextView
+        android:id="@+id/daysofftext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="@string/switch_schedules"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.106"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/scheduleIcon"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.878"
+        app:layout_constraintStart_toEndOf="@+id/daysofftext"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/switchsched"
+        android:contentDescription="@string/icon" />
+
+    <TableLayout
+        android:id="@+id/tableLayout"
+        android:layout_width="363dp"
+        android:layout_height="300dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/daysofftext"
+        app:layout_constraintVertical_bias="0.033">
+
+        <TextView
+            android:text="@string/switching_from"
+            android:textSize="18sp" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <EditText
+                android:text="@string/day"
+                android:textSize="16sp"
+                android:ems="5"
+                android:textAlignment="center"
+                android:gravity="center_horizontal"/>
+
+            <EditText
+                android:layout_width="241dp"
+                android:ems="5"
+                android:gravity="center_horizontal"
+                android:inputType="time"
+                android:textAlignment="center"
+                android:text="8:00am-4:00pm"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <TextView
+                android:layout_width="57dp"
+                android:layout_height="wrap_content"
+                android:text="@string/to"
+                android:textSize="18sp" />
+
+            <EditText
+                android:text="EmployeeName"
+                android:inputType="textPersonName"
+                android:ems="5"
+                android:textAlignment="center"
+                android:gravity="center_horizontal"/>
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <EditText
+                android:text="@string/day"
+                android:textSize="16sp"
+                android:ems="5"
+                android:textAlignment="center"
+                android:gravity="center_horizontal" />
+
+            <EditText
+                android:layout_width="241dp"
+                android:ems="5"
+                android:gravity="center_horizontal"
+                android:inputType="time"
+                android:textAlignment="center"
+                android:text="8:00am-4:00pm"/>
+        </TableRow>
+
+    </TableLayout>
+
+
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="101dp"
+        android:layout_height="57dp"
+        android:background="@color/yellow"
+        android:text="@string/submit"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
+        app:layout_constraintVertical_bias="0.428" />
 </androidx.constraintlayout.widget.ConstraintLayout>
