--- a/app/src/main/res/layout/activity_daysoff_request.xml
+++ b/app/src/main/res/layout/activity_daysoff_request.xml
@@ -24,27 +24,82 @@
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginBottom="6dp"
+        android:contentDescription="@string/icon"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.878"
+        app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintStart_toEndOf="@+id/daysofftext"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/dayoff"
-        android:contentDescription="@string/icon" />
+        app:layout_constraintVertical_bias="0.473"
+        app:srcCompat="@drawable/dayoff" />
 
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="363dp"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/daysofftext"
-        app:layout_constraintVertical_bias="0.033">
+        app:layout_constraintVertical_bias="0.137">
+
+        <TextView
+            android:text="@string/from"
+            android:textSize="20sp" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <EditText
+                android:ems="5"
+                android:gravity="center_horizontal"
+                android:text="@string/day"
+                android:textAlignment="center"
+                android:textSize="16sp" />
+
+            <EditText
+                android:layout_width="241dp"
+                android:ems="5"
+                android:gravity="center_horizontal"
+                android:inputType="time"
+                android:text="8:00am-4:00pm"
+                android:textAlignment="center" />
+        </TableRow>
+
+        <TextView
+            android:text="@string/to"
+            android:textSize="20sp" />
+
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <EditText
+                android:ems="5"
+                android:gravity="center_horizontal"
+                android:text="@string/day"
+                android:textAlignment="center"
+                android:textSize="16sp" />
+
+            <EditText
+                android:layout_width="241dp"
+                android:ems="5"
+                android:gravity="center_horizontal"
+                android:inputType="time"
+                android:text="8:00am-4:00pm"
+                android:textAlignment="center" />
+        </TableRow>
 
     </TableLayout>
-
 
     <Button
         android:id="@+id/submitButton"
@@ -55,9 +110,8 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout"
-        app:layout_constraintVertical_bias="0.428" />
+        app:layout_constraintVertical_bias="0.113" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
