--- a/app/src/main/res/layout/activity_manager_dashboard.xml
+++ b/app/src/main/res/layout/activity_manager_dashboard.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RequestsActivity">
+    tools:context=".ManagerDashboardActivity">
+
     <LinearLayout
         android:id="@+id/dashLLayout"
         android:layout_width="match_parent"
@@ -24,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
-                android:text="@string/schedule_requests"
+                android:text="@string/my_dashboard"
                 android:textColor="@color/white"
                 android:textSize="24sp" />
 
@@ -46,7 +47,7 @@
                 android:layout_marginLeft="325dp"
                 android:layout_marginTop="25dp"
                 android:contentDescription="@string/icon"
-                app:srcCompat="@drawable/employee_icon" />
+                app:srcCompat="@drawable/manager_icon" />
         </RelativeLayout>
 
         <androidx.gridlayout.widget.GridLayout
@@ -56,72 +57,74 @@
             app:rowCount="2">
 
 
+            <!--View Breakdown Card-->
             <RelativeLayout
                 android:layout_width="205dp"
                 android:layout_height="205dp">
-                <!--Change Schedule Card-->
                 <Button
-                    android:id="@+id/changeSchedule"
+                    android:id="@+id/breakdownCard"
                     android:layout_width="108dp"
                     android:layout_height="108dp"
                     android:layout_margin="49dp"
-                    android:contentDescription="@string/icon"
-                    android:background="@drawable/changeavailability"/>
+                    android:background="@drawable/breakdown"
+                    android:contentDescription="@string/icon" >
+                </Button>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/change_availability"
+                    android:text="@string/view_breakdown"
                     android:layout_marginTop="155dp"
-                    android:layout_marginLeft="45dp"
-                    android:layout_marginStart="45dp" />
+                    android:layout_marginLeft="49dp"
+                    android:layout_marginStart="49dp" />
             </RelativeLayout>
 
 
+            <!--Accepting/Declining Requests Card-->
             <RelativeLayout
                 android:layout_width="205dp"
                 android:layout_height="205dp">
-                <!--Switch Schedules Card-->
                 <Button
-                    android:id="@+id/switchSchedule"
+                    android:id="@+id/requestsCard"
                     android:layout_width="108dp"
                     android:layout_height="108dp"
                     android:layout_margin="49dp"
-                    android:contentDescription="@string/icon"
-                    android:background="@drawable/switchsched"/>
+                    android:background="@drawable/viewrequest"
+                    android:contentDescription="@string/icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Switch Schedules"
+                    android:text="View Requests"
                     android:layout_marginTop="155dp"
-                    android:layout_marginLeft="45dp"
-                    android:layout_marginStart="45dp" />
+                    android:layout_marginLeft="55dp"
+                    android:layout_marginStart="55dp" />
             </RelativeLayout>
 
 
+            <!--Auto Schedule Card-->
             <RelativeLayout
                 android:layout_width="205dp"
                 android:layout_height="205dp">
-                <!--Day Offs Card-->
                 <Button
-                    android:id="@+id/daysOff"
+                    android:id="@+id/autoscheduleCard"
                     android:layout_width="108dp"
                     android:layout_height="108dp"
                     android:layout_margin="49dp"
-                    android:contentDescription="@string/icon"
-                    android:background="@drawable/dayoff" />
+                    android:background="@drawable/breakdown"
+                    android:contentDescription="@string/icon" >
+                </Button>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Request Days Off"
+                    android:layout_width="108dp"
+                    android:layout_height="32dp"
+                    android:layout_marginStart="49dp"
+                    android:layout_marginLeft="49dp"
                     android:layout_marginTop="155dp"
-                    android:layout_marginLeft="48dp"
-                    android:layout_marginStart="48dp" />
+                    android:text="@string/auto_schedule_employees"
+                    android:textAlignment="center" />
             </RelativeLayout>
 
         </androidx.gridlayout.widget.GridLayout>
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
