--- a/app/src/main/res/layout/activity_switch_schedule.xml
+++ b/app/src/main/res/layout/activity_switch_schedule.xml
@@ -119,7 +119,7 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/submitButton"
+        android:id="@+id/submitDaysOffButton"
         android:layout_width="101dp"
         android:layout_height="57dp"
         android:background="@color/yellow"
