--- a/app/src/main/res/layout/activity_change_availability.xml
+++ b/app/src/main/res/layout/activity_change_availability.xml
@@ -51,7 +51,7 @@
             android:layout_marginBottom="15dp">
 
             <TextView
-                android:id="@+id/days"
+                android:id="@+id/scheduleDate"
                 android:paddingStart="3dp"
                 android:paddingLeft="3dp"
                 android:paddingRight="3dp"
@@ -76,14 +76,14 @@
         </TableRow>
 
         <TableRow
-            android:id="@+id/Sunday"
+            android:id="@+id/dateFirst"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="10dp"
             android:paddingBottom="10dp">
 
             <TextView
-                android:id="@+id/sun"
+                android:id="@+id/firstDate"
                 android:text="@string/sunday"
                 android:textSize="16sp" />
 
@@ -259,7 +259,7 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/submitButton"
+        android:id="@+id/submitDaysOffButton"
         android:layout_width="101dp"
         android:layout_height="57dp"
         android:background="@color/yellow"
