--- a/app/src/main/res/layout/activity_daysoff_request.xml
+++ b/app/src/main/res/layout/activity_daysoff_request.xml
@@ -41,13 +41,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/daysofftext"
-        app:layout_constraintVertical_bias="0.137">
+        app:layout_constraintVertical_bias="0.114">
 
         <TextView
-            android:text="@string/from"
+            android:text="Desired Date"
             android:textSize="20sp" />
 
         <TableRow
+            android:id="@+id/desiredDateText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
@@ -55,54 +56,19 @@
             android:paddingBottom="5dp">
 
             <EditText
-                android:ems="5"
-                android:gravity="center_horizontal"
-                android:text="@string/day"
-                android:textAlignment="center"
-                android:textSize="16sp" />
-
-            <EditText
-                android:layout_width="241dp"
+                android:id="@+id/desiredDateInput"
+                android:layout_width="324dp"
                 android:ems="5"
                 android:gravity="center_horizontal"
                 android:inputType="time"
-                android:text="8:00am-4:00pm"
                 android:textAlignment="center" />
         </TableRow>
 
-        <TextView
-            android:text="@string/to"
-            android:textSize="20sp" />
-
-
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp">
-
-            <EditText
-                android:ems="5"
-                android:gravity="center_horizontal"
-                android:text="@string/day"
-                android:textAlignment="center"
-                android:textSize="16sp" />
-
-            <EditText
-                android:layout_width="241dp"
-                android:ems="5"
-                android:gravity="center_horizontal"
-                android:inputType="time"
-                android:text="8:00am-4:00pm"
-                android:textAlignment="center" />
-        </TableRow>
 
     </TableLayout>
 
     <Button
-        android:id="@+id/submitButton"
+        android:id="@+id/submitDaysOffButton"
         android:layout_width="101dp"
         android:layout_height="57dp"
         android:background="@color/yellow"
@@ -112,6 +78,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout"
-        app:layout_constraintVertical_bias="0.113" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
