--- a/app/src/main/res/layout/activity_manager_dashboard.xml
+++ b/app/src/main/res/layout/activity_manager_dashboard.xml
@@ -111,13 +111,13 @@
                     android:layout_width="108dp"
                     android:layout_height="108dp"
                     android:layout_margin="49dp"
-                    android:background="@drawable/breakdown"
+                    android:background="@drawable/autoschedule"
                     android:contentDescription="@string/icon" >
                 </Button>
 
                 <TextView
-                    android:layout_width="108dp"
-                    android:layout_height="32dp"
+                    android:layout_width="110dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="49dp"
                     android:layout_marginLeft="49dp"
                     android:layout_marginTop="155dp"
