--- a/app/src/main/res/layout/activity_daysoff_request.xml
+++ b/app/src/main/res/layout/activity_daysoff_request.xml
@@ -47,44 +47,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/daysofftext"
-        app:layout_constraintVertical_bias="0.114">
-
-        <TextView
-            android:text="Desired Date"
-            android:textSize="20sp" />
-
-        <TableRow
-            android:id="@+id/desiredDateText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp">
-
-            <EditText
-                android:id="@+id/desiredDateInput"
-                android:layout_width="324dp"
-                android:ems="5"
-                android:gravity="center_horizontal"
-                android:inputType="time"
-                android:textAlignment="center" />
-        </TableRow>
-
-
-    </TableLayout>
+        app:layout_constraintVertical_bias="0.467"/>
 
     <Button
         android:id="@+id/submitDaysOffButton"
         android:layout_width="101dp"
         android:layout_height="57dp"
-
+        android:layout_marginBottom="380dp"
         android:background="@color/yellow"
         android:text="@string/submit"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
